--- a/busybox-1.23.1/.config
+++ b/busybox-1.23.1/.config
@@ -64,7 +64,7 @@ CONFIG_STATIC=y
 # CONFIG_FEATURE_INDIVIDUAL is not set
 # CONFIG_FEATURE_SHARED_BUSYBOX is not set
 CONFIG_LFS=y
-CONFIG_CROSS_COMPILER_PREFIX="arm-linux-gnueabi-"
+CONFIG_CROSS_COMPILER_PREFIX="arm-linux-gnueabihf-"
 CONFIG_SYSROOT=""
 CONFIG_EXTRA_CFLAGS=""
 CONFIG_EXTRA_LDFLAGS=""
